feat: update all to 1.19.2
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/internal/template/templates/cloud-init/fabric-binary.yaml.tmpl
+++ b/internal/template/templates/cloud-init/fabric-binary.yaml.tmpl
@@ -5,7 +5,7 @@
   - curl -sLSf $URL > fabric-installer.jar
   - java -jar fabric-installer.jar server -downloadMinecraft
   - echo "serverJar=minecraft-server.jar" > /minecraft/fabric-server-launcher.properties
-  - cp /tmp/build/fabric-server-launch.jar /minecraft/server.jar
-  - cp /tmp/build/server.jar /minecraft/minecraft-server.jar
+  - cp /tmp/build/fabric-server-launch.jar /minecraft/minecraft-server.jar
+  - cp /tmp/build/server.jar /minecraft/server.jar
   - rm -rf /tmp/build
 {{- end }}
